--- a/low-quality-posts/2020-04-14-airflow-k8s-101.md
+++ b/low-quality-posts/2020-04-14-airflow-k8s-101.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Airflow + Kubernetes 101"
-tags: [MLOps, Docker]
+tags: [MLOps, Docker, Backend]
 toc: true
 icon: airflow.svg
 notfull: 1
