--- a/posts/js/2020-11-12-js-101.md
+++ b/posts/js/2020-11-12-js-101.md
@@ -4,7 +4,7 @@ title: "JavaScript 101"
 tags: [JavaScript]
 toc: true
 icon: /img/cats/js.svg
-notefull: 1
+notfull: 1
 keywords: practice directly on browser inspect ecmascript ES6 concise getters setters blocks variable scopes operators conditional statements if switch definition function strings special characters arrays objects destructuring assignment JSON javascript object notation iterate while for do while loops
 ---
 
