--- a/posts/js/2021-09-03-js-tips.md
+++ b/posts/js/2021-09-03-js-tips.md
@@ -3,7 +3,6 @@ layout: post
 title: "JavaScript discrete note"
 tags: [JavaScript]
 toc: true
-notfull: 1
 icon: /img/cats/js.svg
 keywords: "js extra tips automatically reload page mathjax anchor link fixed navigation header hover links back to top button zoom enlarge photo js prevent default event keyboard arrow json fetch"
 ---
@@ -27,10 +26,8 @@ function getSafe(fn, defaultVal) {
 console.log(getSafe(() => obj.a.lot.of.properties));
 
 // or add an optional default value
-console.log(getSafe(() => obj.a.lot.of.properties, 'nothing'));
+console.log(getSafe(() => obj.a.lot.of.properties, "nothing"));
 ```
-
-
 
 ## Automatically reload page if js file changes
 
@@ -71,7 +68,7 @@ Auto hide / show the next `div` of the currently clicked `div`.
 
 👉 Check [the codes](https://gist.github.com/dinhanhthi/cc6ce14f1ce4af862e67ecf8f8c9a3a9).
 
-__Advantage__: We don't need the id of content div, this method requires that `div.hs__content` comes right after `div.hs__title`, otherwise it won't work!
+**Advantage**: We don't need the id of content div, this method requires that `div.hs__content` comes right after `div.hs__title`, otherwise it won't work!
 
 ## Click to enlarge photo
 
@@ -83,13 +80,17 @@ If some photos on your page are too small and you wanna add a function in that u
 
 Stop arrow key acts as usual,
 
-``` js
-window.addEventListener("keydown", function(e) {
-	// space and arrow keys
-	if([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) {
-		e.preventDefault();
-	}
-}, false);
+```js
+window.addEventListener(
+  "keydown",
+  function (e) {
+    // space and arrow keys
+    if ([32, 37, 38, 39, 40].indexOf(e.keyCode) > -1) {
+      e.preventDefault();
+    }
+  },
+  false
+);
 ```
 
 If `div_1` inside `div_2`, prevent actions in `div_2` when performs on `div_1` (check [this example](https://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_event_stoppropagation)), use `e.stopPropagation()`.
