--- a/posts/js/2021-10-29-ydkjsy-1.md
+++ b/posts/js/2021-10-29-ydkjsy-1.md
@@ -328,9 +328,133 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 - However,
 
   ```js
+  const odds = [1, 3, 5];
+  odds[1] = 7;	// OK :(
+  odds = [];		// Error!
   ```
 
+- 💡 Use `const` when you need a meaningful variable like `myBirthDay` instead of just `true` . **Also**, ==with primitive values, `const` helps avoid confusion due to reassignment problems==.
 
+### Functions
+
+- In JS, the word "functions" takes a broader meaning of "procedure" -- a collection of statements can be invoked many times.
+
+- Different types,
+
+  ```js
+  // Function declaration <= appear as a statement by itself
+  function functionName(coolThings) {
+    // ...
+    return returnedValue;
+  }
+  // Association between "functionName" and "returnedValue" happens during
+  // the compile phase, before the code is executed.
+  ```
+
+  ```js
+  // Function as an expression
+  // Could be "let", "var"
+  const functionName = function(coolThings) {
+    // ...
+    return returnedValue;
+  }
+  // (Diff from func declaration) Function expression is not associated with
+  // its identifier until that statement during runtime.
+  ```
+
+- ==Function are values that can be assigned and passed as an argument.== It's a special type of object.
+
+- Functions can be assigned as properties of objects
+
+  ```js
+  var whatToSay = {
+    greeting() { console.log("Hello!"); },
+    question() { console.log("What's your name?"); }, 
+    answer() { console.log("My name is Kyle."); }
+  };
+  whatToSay.greeting(); // Hello!
+  ```
+
+- **[Appendix A](#appendix-a-—-exploring-further)** -- So many function forms
+
+  - *Named function expression*
+
+    ```js
+    // Could be "let" or "var"
+    const awesomeFunc = function someName(arg) {
+      // ...
+      return amzingStuff;
+    }
+    awesomeFunc.name; // "someName"
+    // "awesomeFunc" and "someName" are only linked at the runtime
+    // 👌 They should have the same name!
+    ```
+
+  - Should a function have a name? => "*In my opinion [Kyle's], if a function exists in your program, it has a purpose; otherwise, take it out! And if it has a purpose, it has a natural name that describes that purpose.*"
+
+  - Some more forms (early 2020, maybe more)
+
+    ```js
+    // generator function declaration
+    function *two() { .. }
+    
+    // async function declaration
+    async function three() { .. }
+    
+    // async generator function declaration
+    async function *four() { .. }
+    
+    // named function export declaration (ES6 modules)
+    export function five() { .. }
+    ```
+
+    ```js
+    // IIFE
+    (function(){ .. })();
+    (function namedIIFE(){ .. })();
+    
+    // asynchronous IIFE
+    (async function(){ .. })();
+    (async function namedAIIFE(){ .. })();
+    ```
+
+  - *Arrow function expression*
+
+    ```js
+    var f;
+    f = () => 42;
+    f = x => x * 2;
+    f = (x) => x * 2;
+    f = (x,y) => x * y;
+    f = x => ({ x: x * 2 });
+    f = x => { return x * 2; };
+    f = async x => {
+      var y = await doSomethingAsync(x);
+      return y * 2;
+    };
+    someOperation( x => x * 2 );
+    ```
+
+    - "*Since I don’t think anonymous functions are a good idea to use frequently in your programs, ==I’m not a fan of using the `=>` arrow function form==.*"
+
+  - As *methods* in classes
+
+    ```js
+    class SomethingKindaGreat {
+      // class methods
+      coolMethod() { .. }		// no commas!
+      boringMethod() { .. }
+    }
+    var EntirelyDifferent = {
+      // object methods
+      coolMethod() { .. },		// commas!
+      boringMethod() { .. },
+    	// (anonymous) function expression property
+    	oldSchool: function() { .. }
+    };
+    ```
+
+### Comparisons
 
 
 
