--- a/posts/python/2019-09-03-pep-8.md
+++ b/posts/python/2019-09-03-pep-8.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Python PEP 8 : Style Guide"
 tags: [Python]
-icon: "/img_src/about/python.svg"
+icon: "/img/about/python.svg"
 keywords: "pep 8 python style naming style code layout indentation tab or space whitespace recommendation pep8 PEP8 PEP 8 formatting beautifier beautiful python codes 80 characters"
 toc: true
 ---
