--- a/posts/skills/2020-03-09-screen.md
+++ b/posts/skills/2020-03-09-screen.md
@@ -1,13 +1,16 @@
 ---
 layout: post
 title: "Screen"
-tags: [Skills, Linux]
+tags: [Skills, Linux, Terminal]
 toc: true
 icon: terminal.svg
 keywords: "screen session attach reattach detach continue working shutdown computer cheatsheet quick reference cheat sheet remote host interrupt suddenly stop GNU screen terminal multiplexer virtual terminal"
+date: 2021-11-27
 ---
 
 Keep the running tasks on the remote host continue after turning off the local caller.
+
+:point_right: [Other terminal notes](/tags/terminal/).
 
 ## Install
 
