--- a/posts/skills/2020-05-01-terminal.md
+++ b/posts/skills/2020-05-01-terminal.md
@@ -1,19 +1,26 @@
 ---
 layout: post
 title: "Terminals + ZSH"
-tags: [Skills, Linux]
+tags: [Skills, Linux, Terminal]
 toc: true
 icon: terminal.svg
 keywords: "bash terminal cmd cmder command line commandline powershell window terminal zsh guake terminal linux ubuntu mac os osx"
+date: 2021-11-27
 ---
 
 A collection of console terminals in serveral operation systems.
 
-👉 Note: [Bash Command Lines](/bash-command-line/).
+:point_right: [Other terminal notes](/tags/terminal/).
 
-## Windows
+## Terminals
 
-Install [cmder](https://cmder.net) (drop-down by [[Ctr]]+[[`]]) and use [this setting files](https://github.com/dinhanhthi/scripts/tree/master/settings/windows/cmder). Files should be copied to,
+### Windows
+
+Install [cmder](https://cmder.net) (drop-down by [[Ctr]]+[[`]]) and I use [this personal setting files](https://github.com/dinhanhthi/scripts/tree/master/settings/windows/cmder). 
+
+::: hsbox cmder more settings
+
+Files should be copied to,
 
 ``` bash
 # user-ConEmu.xml -> cmder/vendor/conemu-maximus5/ (or `cmder/config/`)
@@ -21,15 +28,18 @@ Install [cmder](https://cmder.net) (drop-down by [[Ctr]]+[[`]]) and use [this se
 # ubuntu.ico -> cmder/icons/
 ```
 
-👉 Note: [WSL2 on Windows](/docker-wsl2-windows/).
+:::
 
 {% hsbox "If you use WSL?" %}
 - Open settings > **Startup** > **Tasks** > `{bash::bash}` (replace `{` and `}` with `{% raw %}{{{% endraw %}` and `{% raw %}}}{% endraw %}`). You can change icon by modify `%\icons\cmder.ico` to `%\icons\ubuntu.ico`.
 - Using _Cascadia Code PL_ font!
+
 {% endhsbox %}
 
-{% hsbox "Old options (using Windows Terminal)" %}
-I use [Windows Terminal](https://github.com/microsoft/terminal): [my setting file](https://github.com/dinhanhthi/scripts/blob/master/settings/windows/windows_terminal/settings.json), read [this tut](https://docs.microsoft.com/en-us/windows/terminal/customize-settings/profile-settings) for more.
+👉 Note: [WSL2 on Windows](/docker-wsl2-windows/).
+
+{% hsbox "Old options (using *Windows Terminal*)" %}
+When I use [Windows Terminal](https://github.com/microsoft/terminal) ([my setting file](https://github.com/dinhanhthi/scripts/blob/master/settings/windows/windows_terminal/settings.json)), read [this tut](https://docs.microsoft.com/en-us/windows/terminal/customize-settings/profile-settings) for more.
 
 ``` bash
 # where windows terminal setting file locates?
@@ -69,9 +79,7 @@ Continue to [this note](/terminal#zsh-linux) with following remarks:
 - [This article](https://docs.microsoft.com/en-us/windows/terminal/tutorials/powerline-setup) may be interesting also.
 {% endhsbox %}
 
-## Linux
-
-### Guake terminal
+### Linux
 
 - [Download guake terminal](http://guake-project.org)
 - Install [Zsh](https://ohmyz.sh/), follow [this note](#zsh-linux).
@@ -85,17 +93,19 @@ Continue to [this note](/terminal#zsh-linux) with following remarks:
 	```
 
 
-## MacOS
+### MacOS
 
-Using [**iTerms2**](https://www.iterm2.com/). Download its settings. Below is the guide of making iTerms2 working like Guake.
+:point_right: Using [**iTerms2**](https://www.iterm2.com/). Download its settings.
 
-{:.indent}
+::: hsbox Making iTerms2 working like Guake
 1. _Preferences_ > Tab _Keys_ > _Hotkey_ > tick on _Show/ hide all windows with a system-wide hotkey_ > choose key combination (<kbd>Cmd</kbd> + <kbd>~</kbd>).
 2. _Preferences_ > _Profiles_ > _Default_ > tab _Windows_ > set _Style_ to _Full-Width Top of Screen_ and _Screen_ to _Screen with Cursor_.
 3. _Preferences_ > _Appearance_ > check _Exclude from Dock and ⌘-Tab Switcher_
 4. Run on startup: _System Preferences_ > _Users and Groups_ > _Login Items_ > _[+]_ > choose _iTerm_.
 
-### Zsh
+:::
+
+### Zsh (MacOS)
 
 ``` bash
 # CLI tools for Xcode
@@ -106,7 +116,7 @@ xcode-select —-install
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
 ```
 
-## Zsh (Linux){:#zsh-linux}
+## Zsh{:#zsh-linux}
 
 👉 Read more [WSL2 + Windows + Windows Terminal](/docker-wsl2-windows).
 
@@ -144,14 +154,8 @@ sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/mas
 
 ### Plugins
 
-``` bash
-# PLUGINS
-# zsh-autosuggestions
-git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
-
-# zsh-syntax-highlighting
-git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
-```
+- [zsh-autosuggestions](https://github.com/zsh-users/zsh-autosuggestions/blob/master/INSTALL.md)
+- [zsh-syntax-highlighting](https://github.com/zsh-users/zsh-syntax-highlighting)
 
 After installing [plugins](https://github.com/ohmyzsh/ohmyzsh/wiki/Plugins), put them in `~/.zshrc`,
 
@@ -215,3 +219,7 @@ sudo apt-get install fonts-powerline
 In terminal, choose the corresponding installed fonts.
 
 Add **alias** to `~/.zshrc` (search "alias" to find the place to put).
+
+## Other plugins
+
+1. [fzf](https://github.com/junegunn/fzf) -- search in terminal. (Use: `fzf`)
