--- a/posts/skills/2021-10-03-git.md
+++ b/posts/skills/2021-10-03-git.md
@@ -3,7 +3,7 @@ layout: post
 title: "Git"
 tags: [Skills, Git]
 toc: true
-icon: "/img_src/about/git.svg"
+icon: "/img/about/git.svg"
 keywords: "github git gitlab branches merge remove clone github desktop gitkraken push pull commit discard changes repository staged alias git gui gitk reset checkout ssh clone to local key rename branch local remote restore commit stash pull push -m -d -b master remote checkout -- . : -s ours FETCH HEAD comparelog -1 --prep status checkout gui graphic repository repo config credential.helper store --global git cheatsheet quit vim exit vim editor upstream corresponding local remote branches repo template notetheme notetheme2 fatal: Authentication failed for two factor authentication fast-forward fast forward git submodule sub module change remote"
 ---
 
@@ -290,8 +290,15 @@ git diff --stat FETCH_HEAD
 ```
 
 ``` bash
-# just fetch the changes from remote
+# Just fetch the changes from remote
+# Appliy to the current branch
 git fetch
+```
+
+```bash
+# Fetch a branch without checkout
+# (On branch A but wanna fetch/create branch B)
+git fetch origin branch-b:branch-b
 ```
 </div>
 
