--- a/posts/web-dev/2019-12-16-gatsby-js.md
+++ b/posts/web-dev/2019-12-16-gatsby-js.md
@@ -4,7 +4,7 @@ title: "Gatsby 101"
 tags: [Web Dev, GatsbyJS, Static Site Generators]
 toc: true
 icon: gatsby.png
-keywords: create a website static web react js gatsby ssg static site component state stateless bootstrap fontawesome
+keywords: "create a website static web react js gatsby ssg static site component state stateless bootstrap fontawesome"
 date: 2021-10-31
 ---
 
