--- a/posts/others/2021-06-25-gopro.md
+++ b/posts/others/2021-06-25-gopro.md
@@ -1,16 +1,57 @@
 ---
 layout: post
-title: "GoPro 101"
+title: "GoPro + iMovie / Final Cut"
 tags: [Others, Fresh Installation, Collection, Device]
 toc: true
 icon: gopro.svg
 notfull: 1
-keywords: "relax cinema gopro go pro camera tech travel"
+keywords: "relax cinema gopro go pro camera tech travel imovie final cut meida movie editing tool youtube"
+date: 2021-12-27
 ---
 
 A note of an amateur who has recently bought a GoPro.
 
-## Accessories + things to buy
+
+
+## 🍿 iMovie
+
+### Use exHDD as a source of Library
+
+1. [Source](https://www.youtube.com/watch?v=egHGgrkJe1c&t=240s) (no need to copy to your Mac)
+2. File > Open Library > New > Naming + save to exHDD
+3. Choose the library > Create new event > Import media to it > Wait for it to finish.
+4. Start creating video.
+
+
+
+## 🎬 Final Cut Pro
+
+### Misc
+
+- **Library** = shared media between projects => mahny **projects** = inside Library.
+
+###  Editing
+
+- **💡Keep storage in exHDD**:  When creating a new **Library**, choose **Leave files in place** (in the exHDD, for example) (so that we don't hurt the laptop's storage)
+  - (After creating) Click on a library > (on the right panel) **Storage Location**.
+    - ==Don't store your videos in the Library!==
+    - ==Keep your caches somewhere that easy to find (and delete)==
+- **Quick split**: Place the cursor at the point on timeline and then  [[B]] (Blade tool).
+- **Quick delete**: select a backspace button ([[⌫]]).
+- **Selection**
+  - **Range selection**: [[R]]
+  - **Normal selection**: [[A]]
+
+- **Quick trim**: [[⌥]] + [[\[]] (Trim from current position of cursor to the end)
+- **Fade in/out audio** ([ref](https://support.apple.com/guide/final-cut-pro/fade-audio-in-and-out-ver39580fed/mac)): Choose a audio section > Modify > Adjust Audio Fades > Tick on "Fade in" and "Fade out" > Apply Fades > There will be 2 "small buttons" for you to adjust the fades on timeline.
+
+### Exporting
+
+- **4K + mp4**: Fortmat (Computer) + Codec (H.264 Better Quality). You can also check the ffps, estimated file size.
+
+## 📹 GoPro
+
+###  🧰 Accessories + things to buy
 
 1. [GoPro HERO9 Black](https://gopro.com/en/us/). I chose to *buy a bundle* -- 350 EUR.
 2. [Deyard Accessories Kit](https://www.amazon.com/Deyard-Accessories-Shockproof-Waterproof-Protector/dp/B08DKW63K8) (Shockproof Carry Bag + Waterproof Case + Tempered Glass Screen Protector + Silicone Cover + Snorkel Filter Bundle). -- 22 USD. **What I like from this**: A carry bag with a zip compartiment + Tempered Glass Screen Protector (for capturing under the water) + a silicon cap + a waterproof case + cheap price.
@@ -23,7 +64,7 @@ A note of an amateur who has recently bought a GoPro.
 9. **A Gimbal**: It's difficult to find a gimbal for HERO9 because this GoPro version goes with HyperSmooth 3.0 which is really better to stabilize without a Gimbal. However, in the real world, it's not so good, especially when you move up/down. **The only gimbal** which suits to HERO9 I've found is [INKEE Falcon](https://fr.aliexpress.com/item/1005002660579182.html) -- 74 EUR. I bought it from AliExpress.
 10. (If you're rich) [Quark Stabilizer 2](https://noirmatter.com/products/quark-stabilizer)
 
-## Settings
+### 🔧 Settings
 
 ::: warning
 Below are my personal settings I've found on the internet. They may not be the best ones.
@@ -35,14 +76,13 @@ Below are my personal settings I've found on the internet. They may not be the b
 2. **Outdoor**:
    1. Option 1: 4K - 60 - L - HypOn - Bitrate High - Shut Auto - Min 100 - Max 200 - Sharp Med.
 
-## Bookmarks
+### 🔖 Bookmarks
 
 1. **GoPro Support Hub** -- [SD Cards that Work with GoPro Cameras](https://community.gopro.com/t5/en/SD-Cards-that-Work-with-GoPro-Cameras/ta-p/394308).
 2. [GoPro Media Library](https://plus.gopro.com/media-library/) (If you subsribe to GoPro Plus -- 49 EUR / year)
 3. **ClicklikeThis** -- [How Many Minutes of Video Per GB? Hold Capacity (All Card Sizes)](https://clicklikethis.com/how-many-videos-per-gb/).
-4. (For iMovie) [Use your external HDD as a source of Library](https://www.youtube.com/watch?v=egHGgrkJe1c&t=240s) (no need to copy to your Mac)
 
-### No copyright sound sources
+#### No copyright sound sources
 
 1. [Youtube Music](https://studio.youtube.com/channel/UC/music) -- YouTube Studio.
 2. [Facebook Sound Collection](https://business.facebook.com/creatorstudio/).
@@ -50,7 +90,7 @@ Below are my personal settings I've found on the internet. They may not be the b
 4. [NoCopyrightSounds](https://www.youtube.com/channel/UC_aEa8K-EOJ3D6gOs7HcyNg).
 5. [Vlog No Copyright Music](https://www.youtube.com/channel/UCEickjZj99-JJIU8_IJ7J-Q) -- I really like this one, I use its tracks for my video background music.
 
-## Tips
+### 💡 Tips
 
 1. Don't record a *very-long-and-boring* videos, record moments and use a video editor (like iMovie) to merge them later.
 2. **Travel** with not many SD Cards?
@@ -64,9 +104,9 @@ Below are my personal settings I've found on the internet. They may not be the b
    3. **Option 3** (I use) : Upload video to Youtube and set to private or ublisted. Be careful on the audio you use in the video. **Note**: the videos you saved on Youtube can be deleted without any reason!
    4. **Option 4** (I use) : GoPro Plus. **I like**: unlimited + keep your original footages + goes with many options including offering 2 free replacement cameras for your gopro + you can share your video to youtube/facebook in background. **I don't like**: take longer to upload + cannot make album + cannot share as embedded + the management system is bad.
 
-## Fix things
+### 🐞 Fix things
 
-### MacOS cannot recognize SD Card?
+#### MacOS cannot recognize SD Card?
 
 ``` bash
 The operation can’t be completed because one or more required items can’t be found.
@@ -74,6 +114,6 @@ The operation can’t be completed because one or more required items can’t be
 
 Just Force to quit Finder and relaunch it.
 
-### Flicker problems
+#### Flicker problems
 
 For example, [this video](https://www.youtube.com/watch?v=FIQKp4g9sAE). $\Rightarrow$ Choose **PAL** settings (50fps) instead of NTSC.
