--- a/posts/skills/2020-03-09-screen.md
+++ b/posts/skills/2020-03-09-screen.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Screen"
-tags: [Skills, Linux, Terminal]
+tags: [Skills, Linux, Shell]
 toc: true
 icon: terminal.svg
 keywords: "screen session attach reattach detach continue working shutdown computer cheatsheet quick reference cheat sheet remote host interrupt suddenly stop GNU screen terminal multiplexer virtual terminal"
@@ -10,7 +10,7 @@ date: 2021-11-27
 
 Keep the running tasks on the remote host continue after turning off the local caller.
 
-:point_right: [Other terminal notes](/tags/terminal/).
+:point_right: [Other "Shell" notes](/tags/shell/).
 
 ## Install
 
