--- a/posts/skills/2020-05-01-terminal.md
+++ b/posts/skills/2020-05-01-terminal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Terminals + ZSH"
-tags: [Skills, Linux, Terminal]
+tags: [Skills, Linux, Shell]
 toc: true
 icon: terminal.svg
 keywords: "bash terminal cmd cmder command line commandline powershell window terminal zsh guake terminal linux ubuntu mac os osx"
@@ -10,13 +10,13 @@ date: 2021-11-27
 
 A collection of console terminals in serveral operation systems.
 
-:point_right: [Other terminal notes](/tags/terminal/).
+:point_right: [Other "Shell" notes](/tags/shell/).
 
 ## Terminals
 
 ### Windows
 
-Install [cmder](https://cmder.net) (drop-down by [[Ctr]]+[[`]]) and I use [this personal setting files](https://github.com/dinhanhthi/scripts/tree/master/settings/windows/cmder). 
+Install [cmder](https://cmder.net) (drop-down by [[Ctr]]+[[`]]) and I use [this personal setting files](https://github.com/dinhanhthi/scripts/tree/master/settings/windows/cmder).
 
 ::: hsbox cmder more settings
 
