--- a/sample_posts/2020-03-09-docker.md
+++ b/sample_posts/2020-03-09-docker.md
@@ -6,7 +6,7 @@ toc: true
 icon: docker.svg
 good: true
 keywords: "pybash tania rascia CI CD continuous integration deployment pipeline docker idea how to use airflow kubernetes k8s k apache container images dangling images vscode vsc visual studio code ssh container env environnement file variable"
-date: 2021-11-02
+date: 2022-01-25
 ---
 
 {% assign img-url = '/img/post/deploy/docker' %}
@@ -406,6 +406,8 @@ docker commit <container_id> <new_image_name>
 
 ### `Dockerfile`
 
+:point_right: **Official doc**: [Best practices for writing Dockerfiles](https://docs.docker.com/develop/develop-images/dockerfile_best-practices/)
+
 ::: hsbox An example
 
 ``` bash
@@ -553,6 +555,18 @@ More references: [here](https://askubuntu.com/questions/58814/how-do-i-add-envir
 
 {% endhsbox %}
 
+::: warning
+
+([ref](https://docs.docker.com/engine/reference/builder/#copy)) You cannot use something like `COPY .. .` (parent of the folder containing the `Dockerfile`) in the `Dockerfile` because it uses the "build context" and it can access to files within that context.
+
+::: hsbox Solution for above problem
+
+In the Dockerfile, change `COPY .. .` to `COPY . .`.
+
+Next, `cd ..` (go to the parent of the folder containing the Dockerfile, let's say `docker/`) and then use option `-f docker/Dockerfile` when you build an image.
+
+:::
+
 {% hsbox "Example of run mutiple commands" %}
 
 If we run multiple interative commands (wait for action), for example, a jupyter notebook with a ssh server, we cannot put them directly in `CMD` command.
@@ -579,7 +593,7 @@ docker exec -it container_test bash
 ```
 
 ``` bash
-docker run  --name <container_name> -dp 3000:3000 -v todo-db:/etc/todos <docker_img>
+docker run --name <container_name> -dp 3000:3000 -v todo-db:/etc/todos <docker_img>
 ```
 
 ``` bash
@@ -673,7 +687,7 @@ services:
 
 Then run `docker-compose up --build`.
 
-🔅 Update to the newer version of `docker-compose`?
+🔅 Update to the newer version of `docker-compose`? Included in Docker Desktop (on Windows and MacOS),  read [this SO](https://stackoverflow.com/a/49839172/1323473) (Linux).
 
 ## Errors
 
