--- a/posts/web-dev/2020-03-07-css-tips.md
+++ b/posts/web-dev/2020-03-07-css-tips.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: "CSS discrete note"
+title: "CSS / SCSS discrete note"
 tags: [Web Dev]
 notfull: 1
 toc: true
 icon: css.svg
-keywords: "for loop in css scss sass tool flat ui color space gradient contrast different compass watch folder convert wordpress fontawesome font awesome css free version 5 CSS Pseudo-elements html character reference  style.css style.css wordpress auto convert watch gulp ruby compass difference px pixel em rem percentage % numberfing heading scss mixin function loop programming with css"
+date: 2022-01-19
+keywords: "for loop in css scss sass tool flat ui color space gradient contrast different compass watch folder convert wordpress fontawesome font awesome css free version 5 CSS Pseudo-elements html character reference  style.css style.css wordpress auto convert watch gulp ruby compass difference px pixel em rem percentage % numberfing heading scss mixin function loop programming with css BEM syntax Block, Element, Modifier alpha color tailwind tailwindcss"
 ---
 
 ## Tools
@@ -13,6 +14,7 @@ keywords: "for loop in css scss sass tool flat ui color space gradient contrast 
 - **[Flat UI Color](https://flatuicolors.com/)**: Choose different contrast colors
 - [**Color Space**](https://mycolor.space/?hex=%231E0A40&sub=1): make gradient colors.
 - [**CSS Gradient**](https://cssgradient.io/gradient-backgrounds/): make gradient background.
+- [For [VSCode](/visual-studio-code/)] [CSS Navigation](https://marketplace.visualstudio.com/items?itemName=pucelle.vscode-css-navigation) extension.
 
 ## `px` vs `em` vs `rem` vs `%`
 
@@ -101,7 +103,7 @@ sass --watch <scss folder>:<css folder>
     compass watch
     ~~~
 
-## Using FontAwesome 5 in CSS
+## Using FontAwesome in CSS
 
 👉 [Official doc](https://fontawesome.com/how-to-use/on-the-web/advanced/css-pseudo-elements).
 
@@ -158,6 +160,31 @@ body{counter-reset: h2counter;}
 
 👉 [Official references](https://sass-lang.com/documentation).
 
+### `$self` to cast
+
+```scss
+.component {
+  $self: &; // Hey look, it's our new best friend!
+  // scss codes
+
+  &--reversed {
+    //scss codes
+
+    // Here, we use $self to get the correct scope
+    #{ $self }__child-element {
+      background: rebeccapurple;
+    }
+  }
+}
+
+// gives
+.component--reversed .component__child-element {
+  background: rebeccapurple;
+}
+```
+
+
+
 ### Loop
 
 ~~~ scss
@@ -189,3 +216,79 @@ $imgage-sizes: 50, 55, 60, 65, 70, 75, 80, 85, 90, 95, 100;
 }
 ```
 :::
+
+## BEM syntax
+
+- "BEM" = **Block, Element, Modifier**.
+- **Goal**: better understand the relationship between the HTML and CSS.
+- *Smart*: ==everything is a class== and ==nothing is nested==.
+
+:point_right: Read more: [BEM 101 | CSS-Trick](https://css-tricks.com/bem-101/)
+
+```scss
+/* Block component */
+.btn {}
+
+/* Element that depends upon the block */
+.btn__price {}
+
+/* Modifier that changes the style of the block */
+.btn--orange {}
+.btn--big {}
+```
+
+In SCSS,
+
+```scss
+.block {
+  &__element {
+  }
+  &--modifier {
+  }
+}
+
+// Another style
+.block {
+  @at-root #{&}__element {
+  }
+  @at-root #{&}--modifier {
+  }
+}
+
+// Get you
+.block {
+}
+.block__element {
+}
+.block--modifier {
+}
+```
+
+## Colors
+
+```scss
+// Alpha
+$main-color: #806eea;
+// With alpha 33%
+.style {
+  color: rgba($main-color, 0.33);
+}
+// Or
+$color: rgba(20,20,20, .5);
+```
+
+## TailwindCSS
+
+Tailwind's documentation is great, this part contains just my additionally personal notes.
+
+- Tailwind uses regular expressions to extract every string that could possibly be a class name ([ref](https://tailwindcss.com/docs/content-configuration#class-detection-in-depth)).
+- **Dynamic class names** ([ref](https://tailwindcss.com/docs/content-configuration#dynamic-class-names)):
+
+  ``` html {% raw %}
+  <!-- Not working -->
+  <div class="text-{{ error ? 'red' : 'green' }}-600"></div>
+
+  <!-- Working -->
+  <div class="{{ error ? 'text-red-600' : 'text-green-600' }}"></div>
+  {% endraw %}```
+- We can use **[Safelisting classes](https://tailwindcss.com/docs/content-configuration#safelisting-classes)** for some customized classes.
