--- a/posts/js/2020-11-12-js-101.md
+++ b/posts/js/2020-11-12-js-101.md
@@ -5,7 +5,8 @@ tags: [JavaScript]
 toc: true
 icon: /img/cats/js.svg
 notfull: 1
-keywords: practice directly on browser inspect ecmascript ES6 concise getters setters blocks variable scopes operators conditional statements if switch definition function strings special characters arrays objects destructuring assignment JSON javascript object notation iterate while for do while loops
+keywords: "practice directly on browser inspect ecmascript ES6 concise getters setters blocks variable scopes operators conditional statements if switch definition function strings special characters arrays objects destructuring assignment JSON javascript object notation iterate while for do while loops try catch"
+date: 2022-02-04
 ---
 
 {% assign img-url = '/img/post/js' %}
@@ -210,7 +211,9 @@ parseInt("11", 2); // give number 3, "2" is radix
 ~~~
 </div>
 
-## Conditional statements `if` / `switch`
+## Statements
+
+### Conditional statements `if` / `switch`
 
 - **Comparison Operators**: `<`, `==`, `===` (strict equality), `>`, `>=`, `<=`, `!=`, `!==` (strict inequality).
   - Difference between `==` and `===`: `3=='3'` (true), `3==='3'` (false).
@@ -252,6 +255,59 @@ switch (var) {
 </div>
 
 You can remove `break;` to apply the same result for multiple cases.
+
+### Iterate with `while` / `for` / `do..while` loops
+
+Check [more statements](https://www.w3schools.com/jsref/jsref_statements.asp).
+
+<div class="col-2-equal">
+
+~~~ js
+while (<conditions>){
+  // commands
+}
+~~~
+
+~~~ js
+do{
+  // commands
+} while (<conditions>);
+~~~
+
+~~~ js
+for (var i=0; i<5; i++){
+  // commands
+}
+~~~
+
+~~~ js
+// Iterate odd numbers
+for (var i=0; i<5; i+=2){
+  // commands
+}
+~~~
+
+~~~ js
+// Count backwards
+for (var i=10; i?5; i-=2){
+  // commands
+}
+~~~
+</div>
+
+### Try...catch
+
+```js
+try {
+  // statements to try
+} catch (err) {
+  // catch statements to handle err
+} finally {
+  // statements performed even there is err
+}
+```
+
+**Nested**? 👉 Read [these clear examples](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/try...catch#nested_try-blocks) on MDN.
 
 ## Functions
 
@@ -480,45 +536,6 @@ var ourMusic = [
 ~~~
 
 To access `"CD"`: `ourMusic[0].formats[0]`.
-
-## Iterate with `while` / `for` / `do..while` loops
-
-Check [more statements](https://www.w3schools.com/jsref/jsref_statements.asp).
-
-<div class="col-2-equal">
-
-~~~ js
-while (<conditions>){
-  // commands
-}
-~~~
-
-~~~ js
-do{
-  // commands
-} while (<conditions>);
-~~~
-
-~~~ js
-for (var i=0; i<5; i++){
-  // commands
-}
-~~~
-
-~~~ js
-// Iterate odd numbers
-for (var i=0; i<5; i+=2){
-  // commands
-}
-~~~
-
-~~~ js
-// Count backwards
-for (var i=10; i?5; i-=2){
-  // commands
-}
-~~~
-</div>
 
 ## References
 
