--- a/posts/js/2021-10-29-ydkjsy-1.md
+++ b/posts/js/2021-10-29-ydkjsy-1.md
@@ -28,7 +28,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 - "_The primary point of the title “You Don’t Know JS Yet” is to point out that most JS developers don’t take the time to really understand how the code that they write works._"
 - "_My suggestion is you take your time going through YDKJSY. Take one chapter, read it completely through start to finish, and then go back and re-read it section by section. Stop in between each section, and practice the code or ideas from that section. For larger concepts, it probably is a good idea to expect to spend several days ==digesting, re-reading, practicing==, then digesting some more._"
 
-## Chap 1 — What is JS?
+## Chap 1 — What is JS?[^1]
 
 ### What's With That Name?
 
@@ -62,62 +62,70 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 ### Backwards & Forwards
 
 - **Backwards compatibility**:
-
+  
   - ==Code from the past should still work today== — "_we don't break the web_" (TC39)
   - <u>Idea</u>: JS developer can write code with confidence → their code won't stop working in new released versions.
   - Once it’s in JS, it can’t be taken out because it might break programs, even if we’d
     really, really like to remove it!
   - <u>My idea to remember</u>: old codes work with new engines but old engines may not work with old codes.
+
 - **Forward compatibility**:
+  
   - ==Code from future don't break the web today==.
   - CSS & HTML is forward, not backward!
   - Codes from the past may not work / work the same today.
   - Feature from 2019 in a browser 2010 => page isn't broken! Unrecognized things will be skipped!
   - <u>My idea to remember</u>: old engines work with new code but old codes may not work with new engine.
-  
+
 - ==JS is backwards compatibility + not forward compability==
+  
   - Codes written today, will work in future JS engines.
   - Codes written today may be broken in old JS engines.
 
 - **Why**?
+  
   - "Markup" (HTML) / "Styling" (CSS) languages => easier to "skip over".
   - "Programming language" (JS) => cannot skip something it doesn't understand (the rest may be effected!)
 
 - **Fill the gaps?**
-
+  
   - JS has "forward-compability problems" (FC) (not compatible with old engines)
+  
   - How today codes can be used in an old engine? => use ==**transpiling**== (using a tool to convert a source code of a program from one form to another)
+  
   - FC problems **related syntax** => use a **transpiler** (eg. [Babel](https://babeljs.io/)) -- ==convert "new" JS syntax to "older" syntax.==
-
+    
       ::: col-2-equal
-      ```js
-      // New
-      if (something) {
-          let x = 3; // "let" was added in ES6 (2015)
-          console.log(x);
-      } else {
-          let x = 4; // "let" => block scope
-          console.log(x);
-      }
-      ```
-
-      ```js
-      // Old
-      var x$0, x$1; // different variables
-      if (something) {
-          x$0 = 3; // diferent variables
-          console.log(x$0);
-      } else {
-          x$1 = 4;
-          console.log(x$1);
-      }
-      ```
+    
+    ```js
+    // New
+    if (something) {
+        let x = 3; // "let" was added in ES6 (2015)
+        console.log(x);
+    } else {
+        let x = 4; // "let" => block scope
+        console.log(x);
+    }
+    ```
+    
+    ```js
+    // Old
+    var x$0, x$1; // different variables
+    if (something) {
+        x$0 = 3; // diferent variables
+        console.log(x$0);
+    } else {
+        x$1 = 4;
+        console.log(x$1);
+    }
+    ```
+    
       :::
-
-  -  "*It’s strongly ==recommended that developers use the latest version of JS== so that their code is clean and communicates its ideas most effectively.*" <= ==Let the tools take care of converting==.
-
+  
+  - "*It’s strongly ==recommended that developers use the latest version of JS== so that their code is clean and communicates its ideas most effectively.*" <= ==Let the tools take care of converting==.
+  
   - FC problems **related to missing API method** => use **==polyfill==** (aka "shim"). <= Normally, a transpiler like Babel will detect and add it automatically.
-
+    
     ```js
     // NEW: .finally() <= ES2019
     // getSomeRecords() returns us a promise for some // data it will fetch
@@ -128,19 +136,19 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
       .catch(showError) // show an error if not
       .finally(hideSpinner) // always hide the spinner
     ```
-
+    
     ```js
     // OLD:
     if (!Promise.prototype.finally) { // prevents running on engines already has this API
       Promise.prototype.finally = function f(fn){ // define new for old engines
-    		return this.then(
+            return this.then(
           function t(v){
-    				return Promise.resolve( fn() )
-            	.then(function t(){
-    						return v; });
-    					}, function c(e){}
+                    return Promise.resolve( fn() )
+                .then(function t(){
+                            return v; });
+                        }, function c(e){}
         );
-    	};
+        };
     }
     ```
 
@@ -152,12 +160,12 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 - To clearify JS is interpreted or compiled => see how errors are handled.
 
 - Historically, scripted/interpreted languages were executed a top-down, line-by-line
-
+  
   ![image-20211030214022778]({{ img-url }}/image-20211030214022778.png){:.img-80}
   *Interpreted./Scripted Execution. Lines 1-4 must be executed before finding an error in line 5.*
 
 - **Parsing** whole process before any execution,
-
+  
   ![image-20211030214228849]({{ img-url }}/image-20211030214228849.png){:.img-70}
   *Parsing + Compilation + Execution. An error in line 5 would be caught in parsing phase before any execution.*
 
@@ -168,17 +176,17 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 - **==JS is closer to compiled than interpreted==** (but not clearly a compiled or clearly a interpreted) => "*meaning the tools (including the JS engine) process and verify a program (reporting any errors!) before it executes.*"
 
 - **Flow of a JS source program**:
-
+  
   ![image-20211030215050566]({{ img-url }}/image-20211030215050566.png){:.img-70}
   *Parsing, Compiling, and Executing JS.*
-
+  
   1. Program leaves IDE => transpiled by Babel => packed by Webpack => ... => **form1** => delivered to a JS engine.
   2. JS engine parses the code to an AST (*Abstract Syntax Tree*) <= subsequent execution: form1 > AST > executable form.
   3. Engine convert that AST to a kind-of byte code => then to JIT (*just in time*) compiler.
   4. JS VM executes the program.
 
 - **Web Assembly (WASM)** => ==augments what the web (including JS) can accomplish.==
-
+  
   - 2013, "**ASM.js**" (a subset of JS lang, *transpiled from C*) was introduced (by Mozilla) to demonstrate the performance of JS engine where it can run an Unreal 3 game at full 60fps. => ASM.js is just a transpiled language (not for coding).
   - After ASM.js > another group (also Mozilla's) released **Web Assembly (WASM)** <= provide a path for non-JS program (like C) to be converted to a form that could run in the JS engine.
     - ==WASM's format is entirely unlike JS== => skipping the parsing/compilation JS engine normally does
@@ -192,21 +200,21 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 - ES5 (2009) => "**strict mode**" => encourage better JS programs.
 
 - **Why**?
-
+  
   - Not a restriction but rather a "guide" so that JS engine can optimize and effectciently run the code.
   - Prevent some "stupid" coding ways when working in group, for example.
 
 - In form of "*early errors*" => ex: disallows naming 2 function parameters the same.
 
 - Some examples
-
+  
   ```js
   // only whitespace and comments are allowed
   // before the use-strict pragma
   "use strict";
   // the rest of the file runs in strict mode
   ```
-
+  
   ```js
   // Per function scope
   // Used when you wanna convert non-strict to strict programs
@@ -217,9 +225,8 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   ```
 
 - Cannot be default => otherwise, it will break "backward compatibility" rule.
+
 - ==Virtually, all transpiled codes (codes in production) ends up in strict mode.==
-
-
 
 ## Chap 2 — Surveying JS
 
@@ -239,27 +246,29 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 - Values come in 2 forms in JS: **primitive** and **object**
 
 - **Primitive**: `string`, `number`, `boolean`, `undefined`, `null`, `symbol`
-
+  
   - *literals*: `string`, `number`, `boolean`
-
+    
     - `string` literals, eg: `const name = "Thi."` <= Using `""` or `''` is optional but ==should pick one and to use it consistently throughout the program.==
-
+      
       ```js
       // Also can use backtick ``
       console.log("My name is ${name}.") // Output: My name is ${name}.
       console.log(`My name is ${name}.`) // Output: My name is Thi.
       ```
-
+      
       This is called an **interpolation**
-
+    
     - `number`, eg. `3.14` or `Math.PI`
+    
     - `boolean`: `true`, `false`.
-
+  
   - The "emptiness": **undefined**, **null** (They're not the same!) => ==it’s safest and best to use only `undefined` as the single empty value==
+  
   - `symbol`, eg. `const a = Symbol("meaning of life")` <= Symbols are mostly used in low-level code such as in libraries and frameworks.
 
 - **Arrays**:
-
+  
   ```js
   names = ["France", 1, null]
   names.length // 3
@@ -271,11 +280,11 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   arr = [func, 1]
   typeof func // "function"
   ```
-
+  
   <u>Fact</u>: JS array indices are 0-based (eg. `a[0]`)
 
 - **Objects**: an unordered, keyed collection of any various values
-
+  
   ```js
   name = {
     first: "Thi",
@@ -287,22 +296,22 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   ```
 
 - **Value Type Determination**:
-
+  
   ```js
-  typeof 42;									// "number"
-  typeof "abc";								// "string"
-  typeof true;								// "boolean"
-  typeof undefined;						// "undefined"
-  typeof null;								// "object" <= yep!
-  typeof { "a": 1 };					// "object"
-  typeof [1,2,3];							// "object" <= yep!
-  typeof function hello(){}; 	// "function"
+  typeof 42;                                    // "number"
+  typeof "abc";                                // "string"
+  typeof true;                                // "boolean"
+  typeof undefined;                        // "undefined"
+  typeof null;                                // "object" <= yep!
+  typeof { "a": 1 };                    // "object"
+  typeof [1,2,3];                            // "object" <= yep!
+  typeof function hello(){};     // "function"
   ```
 
 ### **Declaring and Using Variables**
 
 - `var` vs `let`
-
+  
   ```js
   var adult = true;
   if (adult) {
@@ -312,28 +321,28 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   console.log(name) // Thi
   console.log(age) // Error!
   ```
-
+  
   **Note**: ==`var` should be avoided in favor of `let` (or `const`)== => prevent confusing in scoping behaviors.
 
 - `let` vs `const` <= must give `const` an initial value and cannot re-assign.
-
+  
   ```js
   const somethingToBeAssignedLater; // Error!
   const myBirthday = true;
   let age;
   age = 30;
   if (myBirthday) {
-  	age=age+1; //OK!
+      age=age+1; //OK!
     myBirthday = false; // Error!
   }
   ```
 
 - However,
-
+  
   ```js
   const odds = [1, 3, 5];
-  odds[1] = 7;	// OK :(
-  odds = [];		// Error!
+  odds[1] = 7;    // OK :(
+  odds = [];        // Error!
   ```
 
 - 💡 Use `const` when you need a meaningful variable like `myBirthDay` instead of just `true` . **Also**, ==with primitive values, `const` helps avoid confusion due to reassignment problems==.
@@ -343,7 +352,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 - In JS, the word "functions" takes a broader meaning of "procedure" -- a collection of statements can be invoked many times.
 
 - Different types,
-
+  
   ```js
   // Function declaration <= appear as a statement by itself
   function functionName(coolThings) {
@@ -353,7 +362,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   // Association between "functionName" and "returnedValue" happens during
   // the compile phase, before the code is executed.
   ```
-
+  
   ```js
   // Function as an expression
   // Could be "let", "var"
@@ -368,7 +377,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 - ==Function are values that can be assigned and passed as an argument.== It's a special type of object.
 
 - Functions can be assigned as properties of objects
-
+  
   ```js
   var whatToSay = {
     greeting() { console.log("Hello!"); },
@@ -379,9 +388,9 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   ```
 
 - **[Appendix A](#appendix-a-—-exploring-further)** -- So many function forms
-
+  
   - *Named function expression*
-
+    
     ```js
     // Could be "let" or "var"
     const awesomeFunc = function someName(arg) {
@@ -392,11 +401,11 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
     // "awesomeFunc" and "someName" are only linked at the runtime
     // 👌 They should have the same name!
     ```
-
+  
   - Should a function have a name? => "*In my opinion [Kyle's], if a function exists in your program, it has a purpose; otherwise, take it out! And if it has a purpose, it has a natural name that describes that purpose.*"
-
+  
   - Some more forms (early 2020, maybe more)
-
+    
     ```js
     // generator function declaration
     function *two() { .. }
@@ -410,7 +419,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
     // named function export declaration (ES6 modules)
     export function five() { .. }
     ```
-
+    
     ```js
     // IIFE
     (function(){ .. })();
@@ -420,9 +429,9 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
     (async function(){ .. })();
     (async function namedAIIFE(){ .. })();
     ```
-
+  
   - *Arrow function expression*
-
+    
     ```js
     var f;
     f = () => 42;
@@ -437,102 +446,102 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
     };
     someOperation( x => x * 2 );
     ```
-
+    
     - "*Since I don’t think anonymous functions are a good idea to use frequently in your programs, ==I’m not a fan of using the `=>` arrow function form==.*"
-
+  
   - As *methods* in classes
-
+    
     ```js
     class SomethingKindaGreat {
       // class methods
-      coolMethod() { .. }		// no commas!
+      coolMethod() { .. }        // no commas!
       boringMethod() { .. }
     }
     var EntirelyDifferent = {
       // object methods
-      coolMethod() { .. },		// commas!
+      coolMethod() { .. },        // commas!
       boringMethod() { .. },
-    	// (anonymous) function expression property
-    	oldSchool: function() { .. }
+        // (anonymous) function expression property
+        oldSchool: function() { .. }
     };
     ```
 
 ### Comparisons
 
 - **Equal...ish**
-
+  
   - We must be aware of the differences between an **equality** and **equivalence** comparisons.
-
+  
   - "Triple equal" `===` <= ==Checking both the value and the type== (in fact, **all** comparisons in JS, not just `===`, does consider the type but `===` disallow any kind of conversion while others do)
-
-    ```jsx
-    3 === 3.0;					// true
-    "yes" === "yes";		// true
-    null === null;			// true
-    false === false;		// true
     
-    42 === "42";				// false
-    "hello" === "Hello"	// false
-    true === 1;					// fasle
-    0 === null;					// fasle
-    "" === null;				// fasle
-    null === undefined;	// fasle
-    ```
-
-  - `===` is lying (not really "strict"),
-
     ```jsx
-    NaN === NaN;														// false
+    3 === 3.0;                    // true
+    "yes" === "yes";        // true
+    null === null;            // true
+    false === false;        // true
+    
+    42 === "42";                // false
+    "hello" === "Hello"    // false
+    true === 1;                    // fasle
+    0 === null;                    // fasle
+    "" === null;                // fasle
+    null === undefined;    // fasle
+    ```
+  
+  - `===` is lying (not really "strict"),
+    
+    ```jsx
+    NaN === NaN;                                                        // false
     Number.isNaN(NaN) === Number.isNaN(NaN) // true
     
-    0 === -0;						// true
-    Object.is(0, -0)		// false <= should use it, like an "===="
+    0 === -0;                        // true
+    Object.is(0, -0)        // false <= should use it, like an "===="
     ```
-
+  
   - `===` isn't a *structural equality* but *identity equality* for object values <= ==In JS, all object values are held by reference=== (cf. [App. A -- Values vs References](#value-vs-reference))
-
+    
     ```jsx
-    [ 1, 2, 3 ] === [ 1, 2, 3 ] 		// false
-    { a: 42 } === { a: 42 } 				// false
-    ( x => x * 2) === ( x => x * 2 ) 	// false
+    [ 1, 2, 3 ] === [ 1, 2, 3 ]         // false
+    { a: 42 } === { a: 42 }                 // false
+    ( x => x * 2) === ( x => x * 2 )     // false
     ```
-
+    
     ```jsx
     var x = [ 1, 2, 3 ];
     var y = x;
-    y === x;					// true (Both point to the same "reference")
-    y === [ 1, 2, 3]	// false
-    x === [ 1, 2, 3]	// false
+    y === x;                    // true (Both point to the same "reference")
+    y === [ 1, 2, 3]    // false
+    x === [ 1, 2, 3]    // false
     ```
-
+  
   - "Deep comparison" for "structural equality" is more complicated than you think (even if you stringify them and then compare, it's not always correct). That's why JS doesn't give any mechanism for this.
 
 - **Coercive Comparisons**
-
+  
   - **Coercion** means a value of one type being converted to its respective representation in another type.
-
+    
     ```jsx
-    42 == "42";		// true ("42" is converted to number)
-    1 == true;		// true
+    42 == "42";        // true ("42" is converted to number)
+    1 == true;        // true
     ```
-
+    
     ```jsx
     // Allowed but avoid to use
-    "" == 0;		// true
-    0 == false;	// true
+    "" == 0;        // true
+    0 == false;    // true
     ```
-
+  
   - If the comparison is between the ==same value type, both `==` and `===` do exactly the same thing, no difference whatsoever==.
-
+  
   - Why not just use `===`? => Because `>`, `<`, `>=`, `<=` use coercive also!
-
+    
     ```jsx
     var arr = [ "1", "10", "100", "1000" ];
     for (let i = 0; i < arr.length && arr[i] < 500; i++) {
       // will run 3 times
     }
     ```
-
+    
     ```jsx
     // Watch out
     var x = "10"
@@ -541,7 +550,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
     x < y // true (use alphabetical comparison of string instead)
     x < z // false
     ```
-
+    
     - It’s still pretty likely you’re going to run into a case where the types may differ.
 
 ### How We Organize in JS
@@ -549,36 +558,36 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 Two major patterns: **Classes** and **Modules**.
 
 - **Classes**
-
+  
   - A class in a program is a definition of a "type" of custom data structure that includes both data and behaviors that operate on that data.
   - Classes define how data structure works but not themselves concrete values. => to get a concrete value of a class, use `new` to *instantiate* it!
-
+  
   ```jsx
   class Page {
     constructor(text) {
-  		this.text = text;
+          this.text = text;
     }
-  	
+  
     print() {
       console.log(this.text);
-  	}
+      }
   }
   
   class Notebook {
     constructor() {
-  		this.pages = [];
+          this.pages = [];
     }
   
     addPage(text) {
-  		var page = new Page(text);
+          var page = new Page(text);
       this.pages.push(page);
-  	}
+      }
   
     print() {
-  		for (let page of this.pages) {
+          for (let page of this.pages) {
         page.print();
       }
-  	}
+      }
   }
   
   var mathNotes = new Notebook();
@@ -587,11 +596,11 @@ Two major patterns: **Classes** and **Modules**.
   mathNotes.print();
   // ..
   ```
-
+  
   - Behaviors (methods) can be only called by instance, not the classes, eg. `mathNotes.addPage()`.
 
 - **Class Inheritance**
-
+  
   ```jsx
   // Base class
   class Publication {
@@ -600,13 +609,13 @@ Two major patterns: **Classes** and **Modules**.
       this.author = author;
       this.pubDate = pubDate;
     }
-    
+  
     print() {
       console.log(`Title: ${this.title}, By: ${this.author}, On: ${this.pubDate}`);
     }
   }
   ```
-
+  
   ```jsx
   // Extended classes
   class Book extends Publication {
@@ -615,7 +624,7 @@ Two major patterns: **Classes** and **Modules**.
       this.publisher = bookDetails.publisher;
       this.ISBN = bookDetails.ISBN;
     }
-    
+  
     print() { // overrides parent's print()
       super.print(); // call (again) parent's print()
       console.log(`Publisher: ${this.publisher}, ISBN: ${this.ISBN}.`);
@@ -627,20 +636,20 @@ Two major patterns: **Classes** and **Modules**.
       super(title,author,pubDate);
       this.URL = URL;
     }
-    
+  
     print() {
       super.print();
-    	console.log(this.URL);
+        console.log(this.URL);
     }
   }
   ```
-
+  
   - `super()` delegates to parent's constructor for its initial- ization work.
   - Parent's `print()` and child's `print()` can have the same name and co-exits => called ***polymorphism***! 
-
+  
   ```jsx
   var YDKJS = new Book({
-  	title: "You Don't Know JS",
+      title: "You Don't Know JS",
     author: "Kyle Simpson",
     publishedOn: "June 2014",
     publisher: "O'Reilly",
@@ -662,21 +671,21 @@ Two major patterns: **Classes** and **Modules**.
   ```
 
 - **Modules**
-
+  
   - Like classes, modules can "include" or "access" the adata and behaviors of other modules.
-
+  
   - From the early days of JS, modules was an important and common pattern, even without a dedicated syntax.
-
+  
   - **Classical module**
-
+    
     ```jsx
     function Publication(title,author,pubDate) {
       var publicAPI = {
-      	print() {
-       		console.log(`Title: ${this.title}, By: ${this.author}, On: ${this.pubDate}`);
+          print() {
+               console.log(`Title: ${this.title}, By: ${this.author}, On: ${this.pubDate}`);
         }
-    	};
-    	return publicAPI;
+        };
+        return publicAPI;
     }
     
     function Book(bookDetails) {
@@ -685,29 +694,29 @@ Two major patterns: **Classes** and **Modules**.
         bookDetails.author,
         bookDetails.publishedOn
       );
-    	var publicAPI = {
+        var publicAPI = {
         print() {
-    			pub.print();
-    			console.log(`Publisher: ${this.publisher}, ISBN: ${this.ISBN}.`);
+                pub.print();
+                console.log(`Publisher: ${this.publisher}, ISBN: ${this.ISBN}.`);
         }
       };
-    	return publicAPI;
+        return publicAPI;
     }
     
     function BlogPost(title,author,pubDate,URL) {
       var pub = Publication(title,author,pubDate);
-    	var publicAPI = {
+        var publicAPI = {
         print() {
           pub.print();
           console.log(URL);
         }
-    	};
-    	return publicAPI;
+        };
+        return publicAPI;
     }
     ```
-
+    
     - In classes, data and methods are accessed with `this.` while modules, they're accessed as identifier variables in scope.
-
+    
     ```tsx
     // Their usage
     var YDKJS = Book({...});
@@ -716,19 +725,19 @@ Two major patterns: **Classes** and **Modules**.
     var forAgainstLet = BlogPost();
     forAgainstLet.print();
     ```
-
+    
     - The only difference is with/without `new`!
-
+  
   - **ES Modules** (ESM).
-
+    
     - 3 different things compared to the classicial modules,
-
+      
       1. No need to define a wrapper function, ==ESMs are always file-based==, one file one module.
       2. Whenever we wanna make an API public, use `export`, otherwise, we cannot call this API from another module.
       3. We don't "instantitate" an ESM, use `import` instead.
-
+    
     - Rewrite above publication module as,
-
+      
       ```jsx
       // publication.js
       function printDetails(title,author,pubDate) {
@@ -741,10 +750,10 @@ Two major patterns: **Classes** and **Modules**.
             printDetails(title,author,pubDate);
           }
         };
-      	return publicAPI; 
+          return publicAPI; 
       }
       ```
-
+      
       ```jsx
       // blogpost.js
       import { create as createPub } from "publication.js";
@@ -756,7 +765,7 @@ Two major patterns: **Classes** and **Modules**.
       
       export function create(title,author,pubDate,URL) {
         var pub = createPub(title,author,pubDate);
-      	var publicAPI = {
+          var publicAPI = {
           print() {
             printDetails(pub,URL);
           }
@@ -764,7 +773,7 @@ Two major patterns: **Classes** and **Modules**.
         return publicAPI;
       }
       ```
-
+      
       ```jsx
       // main.js
       import { create as newBlogPost } from "blogpost.js";
@@ -788,7 +797,7 @@ Two major patterns: **Classes** and **Modules**.
 ### Values vs References{:#value-vs-reference}
 
 - If you assign/pass a value itself, the value is copied. ==Primitives are held by values.==
-
+  
   ```jsx
   var myName = "Kyle";
   var yourName = myName;
@@ -798,7 +807,7 @@ Two major patterns: **Classes** and **Modules**.
   ```
 
 - References are the idea that two or more variables are pointing at the same value. Edit one, others change. ==In JS, only object values (arrays, objects, functions,...) are treated as references.==
-
+  
   ```jsx
   var myAddress = {
     street: "123 JS Blvd".
@@ -810,9 +819,5 @@ Two major patterns: **Classes** and **Modules**.
   myAddress.street = "456 TS Ave";
   console.log(yourAddress.street); // 456 TS Ave
   ```
-
-  
-
-
 
 ## Appendix B — Practice, practice, practice!
