--- a/posts/mlops/2020-03-09-docker.md
+++ b/posts/mlops/2020-03-09-docker.md
@@ -5,16 +5,13 @@ tags: [MLOps, Docker]
 toc: true
 icon: docker.svg
 good: true
-keywords: "pybash tania rascia CI CD continuous integration deployment pipeline docker idea how to use airflow kubernetes k8s k apache container images dangling images vscode vsc visual studio code ssh container env environnement file variable"
-date: 2022-06-20
+keywords: "pybash tania rascia CI CD continuous integration deployment pipeline docker idea how to use airflow kubernetes k8s k apache container images dangling images vscode vsc visual studio code ssh container env environnement file variable container runtime and devel nvidia images"
+date: 2022-08-31
 ---
 
 {% assign img-url = '/img/post/deploy/docker' %}
 
-👉 Note: [ Docker  + GPUs](/docker-gpu/)
-👉 Note: [ Wordpress Docker](/wordpress-docker/)
-👉 Note: [ Airflow + Kubernetes 101](/airflow-k8s-101/)
-👉 Note: [ Tensorflow extra](/tensorflow/)
+👉 Note: [All Docker notes](/tags/docker/)
 
 ## What and Why?
 
@@ -379,6 +376,12 @@ docker images purge
 ~~~
 </div>
 
+::: info
+
+If you use `docker images -a` and see a lot of `<none>:<none>` images. Don't be worry to fast, if they're dangling images, they take spaces, otherwise, they're harmless to your drive! Check [this SO](https://stackoverflow.com/a/53224187/1323473).
+
+:::
+
 ### Containers
 
 <div class="col-2-equal">
@@ -393,6 +396,44 @@ docker rm -f <container-id>
 docker rm -f $(docker ps -a -q)
 ```
 </div>
+
+
+
+## Zsh in a container
+
+If you have already a container, enter that container and then,
+
+```bash
+# Enter
+docker exec -it container_name bash
+
+# Install zsh
+apt-get update
+apt-get install zsh
+zsh
+
+# Install curl
+apt-get install curl
+
+# Install oh-my-zsh
+sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+```
+
+If you want to integrate the zsh installation in the Dockerfile,
+
+```dockerfile
+RUN apt-get install zsh && apt-get install curl
+RUN PATH="$PATH:/usr/bin/zsh"
+RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+```
+
+::: tip
+
+Now, enter the container by `docker exec -it zsh` (instead of `bash`)!
+
+:::
+
+
 
 ## Build an image
 
@@ -537,49 +578,51 @@ More references: [here](https://askubuntu.com/questions/58814/how-do-i-add-envir
 - `WORKDIR app/`: Use `app/` as the working directory.
 - `RUN`: install your application and packages requited, e.g. `RUN apt-get -y update`.
   - `RUN <command>` (shell form)
-	- `RUN ["executable", "param1", "param2"]` (exec form)
+  - `RUN ["executable", "param1", "param2"]` (exec form)
 - `CMD`: sets default command and/or parameters, which can be overwritten if docker container runs with command lines. If there are many `CMD`s, the last will be used.
 
-	``` bash
-	# in Dockerfile
-	CMD echo "Hello world"
-	# run only
-	docker run -it <image>
-	# output: "Hello world"
+  ``` bash
+  # in Dockerfile
+  CMD echo "Hello world"
+  # run only
+  docker run -it <image>
+  # output: "Hello world"
 
-	# run with a command line
-	docker run -it <image> /bin/bash
-	# output (CMD ignored, bash run instead): root@7de4bed89922:/#
-	```
-	- `CMD ["executable","param1","param2"]` (exec form, preferred)
-	- `CMD ["param1","param2"]` (sets additional default parameters for `ENTRYPOINT` in exec form)
-	- `CMD command param1 param2` (shell form)
-	- Multiple commands: `CMD ["sh","-c","mkdir abc && cd abc && touch new.file"]`
+  # run with a command line
+  docker run -it <image> /bin/bash
+  # output (CMD ignored, bash run instead): root@7de4bed89922:/#
+  ```
+  - `CMD ["executable","param1","param2"]` (exec form, preferred)
+  - `CMD ["param1","param2"]` (sets additional default parameters for `ENTRYPOINT` in exec form)
+  - `CMD command param1 param2` (shell form)
+  - Multiple commands: `CMD ["sh","-c","mkdir abc && cd abc && touch new.file"]`
 - `ENTRYPOINT`: configures a container that will run as an executable. Look like `CMD` but `ENTRYPOINT` commands and parameters are not ignored when Docker container runs with command line parameters.
 
-	<div class="hsbox">
-	<div class="hs__title">
-		More detail
-	</div>
-	<div class="hs__content">
+  <div class="hsbox">
+  <div class="hs__title">
+  	More detail
+  </div>
+  <div class="hs__content">
 
-	``` bash
-	# Dockerfile
-	ENTRYPOINT ["/bin/echo", "Hello"]
-	CMD ["world"]
-	# run
-	docker run -it <image>
-	# produces 'Hello world'
+  ``` bash
+  # Dockerfile
+  ENTRYPOINT ["/bin/echo", "Hello"]
+  CMD ["world"]
+  # run
+  docker run -it <image>
+  # produces 'Hello world'
 
-	# but run
-	docker run -it <image> John
-	# produces 'Hello John' (only CMD command is override)
-	```
-	</div>
-	</div>
+  # but run
+  docker run -it <image> John
+  # produces 'Hello John' (only CMD command is override)
+  ```
+  </div>
+  </div>
 
-	- `ENTRYPOINT ["executable", "param1", "param2"]` (exec form, preferred)
-	- `ENTRYPOINT command param1 param2` (shell form)
+  - `ENTRYPOINT ["executable", "param1", "param2"]` (exec form, preferred)
+  - `ENTRYPOINT command param1 param2` (shell form)
+- Check [this SO](https://stackoverflow.com/a/21564990/1323473) for `CMD` vs `ENTRYPOINT`.
+
 - `EXPOSE 5000`: Listen on the specified port
 - `COPY . app/`: Copy the files from the current directory to `app/`
 
@@ -587,7 +630,7 @@ More references: [here](https://askubuntu.com/questions/58814/how-do-i-add-envir
 
 ::: warning
 
-([ref](https://docs.docker.com/engine/reference/builder/#copy)) You cannot use something like `COPY .. .` (parent of the folder containing the `Dockerfile`) in the `Dockerfile` because it uses the "build context" and it can access to files within that context.
+You cannot use something like `COPY .. .` (parent of the folder containing the `Dockerfile`) in the `Dockerfile` because it uses the "build context" and it can access to files within that context. [Ref](https://docs.docker.com/engine/reference/builder/#copy).
 
 ::: hsbox Solution for above problem
 
@@ -657,8 +700,6 @@ docker-compose -p "project_1" up -d
 docker-compose -p "project_2" up -d
 ```
 
-
-
 ::: hsbox An example
 
 ~~~ bash
@@ -678,6 +719,10 @@ services:
 	working_dir: /srv
 ~~~
 
+:::
+
+::: info
+To upgrade docker-compose file format from version `2.x` to version `3.x`, check [this guide](https://docs.docker.com/compose/compose-file/compose-versioning/#upgrading). Also check this: [Compose file versions and upgrading](https://docs.docker.com/compose/compose-file/compose-versioning/).
 :::
 
 {% hsbox "Meaning of terms" %}
@@ -775,3 +820,4 @@ The process cannot access the file 'ext4.vhdx' because it is being used by anoth
 
 - **Play with Docker** -- [right on the web](https://labs.play-with-docker.com/).
 - **Yury Pitsishin** -- [Docker RUN vs CMD vs ENTRYPOINT](https://goinbigdata.com/docker-run-vs-cmd-vs-entrypoint/).
+- [What is the difference between devel and runtime tag for a Docker container? - Stack Overflow](https://stackoverflow.com/questions/56405159/what-is-the-difference-between-devel-and-runtime-tag-for-a-docker-container)
