--- a/posts/skills/2021-10-03-git.md
+++ b/posts/skills/2021-10-03-git.md
@@ -15,8 +15,8 @@ Quick references for basic tasks with git.
 👉 Note: [Github](/github/).
 👉 Note: [Gitkraken](/gitkraken/).
 
-::: success
-For easier tasks, just [use Gitkraken](/gitkraken/) to make things visually.
+::: idea
+For easier tasks, just [use Gitkraken](/gitkraken/) to make things visually. However, **it's paid**.
 :::
 
 ## Installation & Tools
@@ -805,6 +805,10 @@ git config --global submodule.recurse true
 cd blog
 git submodule add https://github.com/you/posts # blog/posts
 ```
+
+::: info
+To stop `Fetching submodule....` when `git pull`: `git config submodule.recurse false`!
+:::
 
 To update all submodules,
 
