--- a/posts/web-dev/2019-12-16-gatsby-js.md
+++ b/posts/web-dev/2019-12-16-gatsby-js.md
@@ -322,7 +322,7 @@ Remember to restart gatsby (<kbd>Ctrl</kbd> + <kbd>C</kbd> to stop and run `gats
 
 ## Using TailwindCSS{:#tailwind}
 
-
+Follow [the official guide](https://tailwindcss.com/docs/guides/gatsby).
 
 ## Using `sass`
 
