--- a/posts_wip/2021-10-29-ydkjsy-1.md
+++ b/posts_wip/2021-10-29-ydkjsy-1.md
@@ -57,7 +57,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   - _Procedural_: organizes codes in a top-down, linear progression. ← eg. C
   - _Object-oriented_ (OO/classes): organizes codes into classes. ← eg. Java/C++
   - _Functional_ (FP): organizes codes into functions. ← eg. Haskell
-  - ==JS is a _multi-paradigm_ language.== => "*meaning the syntax and capabilities allow a developer to mix and match (and bend and reshape!) concepts from various major paradigms*"
+  - ==JS is a _multi-paradigm_ language.== → "*meaning the syntax and capabilities allow a developer to mix and match (and bend and reshape!) concepts from various major paradigms*"
 
 ### Backwards & Forwards
 
@@ -74,7 +74,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   - ==Code from future don't break the web today==.
   - CSS & HTML is forward, not backward!
   - Codes from the past may not work / work the same today.
-  - Feature from 2019 in a browser 2010 => page isn't broken! Unrecognized things will be skipped!
+  - Feature from 2019 in a browser 2010 → page isn't broken! Unrecognized things will be skipped!
   - <u>My idea to remember</u>: old engines work with new code but old codes may not work with new engine.
 
 - ==JS is backwards compatibility + not forward compability==
@@ -84,16 +84,16 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
 - **Why**?
 
-  - "Markup" (HTML) / "Styling" (CSS) languages => easier to "skip over".
-  - "Programming language" (JS) => cannot skip something it doesn't understand (the rest may be effected!)
+  - "Markup" (HTML) / "Styling" (CSS) languages → easier to "skip over".
+  - "Programming language" (JS) → cannot skip something it doesn't understand (the rest may be effected!)
 
 - **Fill the gaps?**
 
   - JS has "forward-compability problems" (FC) (not compatible with old engines)
 
-  - How today codes can be used in an old engine? => use ==**transpiling**== (using a tool to convert a source code of a program from one form to another)
+  - How today codes can be used in an old engine? → use ==**transpiling**== (using a tool to convert a source code of a program from one form to another)
 
-  - FC problems **related syntax** => use a **transpiler** (eg. [Babel](https://babeljs.io/)) -- ==convert "new" JS syntax to "older" syntax.==
+  - FC problems **related syntax** → use a **transpiler** (eg. [Babel](https://babeljs.io/)) — ==convert "new" JS syntax to "older" syntax.==
 
       ::: col-2-equal
 
@@ -103,7 +103,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
         let x = 3; // "let" was added in ES6 (2015)
         console.log(x);
     } else {
-        let x = 4; // "let" => block scope
+        let x = 4; // "let" → block scope
         console.log(x);
     }
     ```
@@ -122,12 +122,12 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
       :::
 
-  - "*It’s strongly ==recommended that developers use the latest version of JS== so that their code is clean and communicates its ideas most effectively.*" <= ==Let the tools take care of converting==.
+  - "*It’s strongly ==recommended that developers use the latest version of JS== so that their code is clean and communicates its ideas most effectively.*" ← ==Let the tools take care of converting==.
 
-  - FC problems **related to missing API method** => use **==polyfill==** (aka "shim"). <= Normally, a transpiler like Babel will detect and add it automatically.
+  - FC problems **related to missing API method** → use **==polyfill==** (aka "shim"). ← Normally, a transpiler like Babel will detect and add it automatically.
 
     ```js
-    // NEW: .finally() <= ES2019
+    // NEW: .finally() ← ES2019
     // getSomeRecords() returns us a promise for some // data it will fetch
     var pr = getSomeRecords();
     // show the UI spinner while we get the data
@@ -154,57 +154,57 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
 ### What's in an Interpretation?
 
-![img]({{ img-url }}/img-20211030155326706.png){:.img-60}
+![img](../img_post/2021-10-29-ydkjsy-1/img-20211030155326706.png){:.img-60}
 *[Source of the image](https://techytalks007.blogspot.com/2016/08/let-us-know-what-are-difference-between.html).*
 
-- To clearify JS is interpreted or compiled => see how errors are handled.
+- To clearify JS is interpreted or compiled → see how errors are handled.
 
 - Historically, scripted/interpreted languages were executed a top-down, line-by-line
 
-  ![image-20211030214022778]({{ img-url }}/image-20211030214022778.png){:.img-80}
+  ![image-20211030214022778](../img_post/2021-10-29-ydkjsy-1/image-20211030214022778.png){:.img-80}
   *Interpreted./Scripted Execution. Lines 1-4 must be executed before finding an error in line 5.*
 
 - **Parsing** whole process before any execution,
 
-  ![image-20211030214228849]({{ img-url }}/image-20211030214228849.png){:.img-70}
+  ![image-20211030214228849](../img_post/2021-10-29-ydkjsy-1/image-20211030214228849.png){:.img-70}
   *Parsing + Compilation + Execution. An error in line 5 would be caught in parsing phase before any execution.*
 
 - "Parsed" language 🤝 "compiled" language: All compiled are parsed.
 
-- JS code is parsed before it's executed. => =="early errors"== => **JS is a parsed language**
+- JS code is parsed before it's executed. → =="early errors"== → **JS is a parsed language**
 
-- **==JS is closer to compiled than interpreted==** (but not clearly a compiled or clearly a interpreted) => "*meaning the tools (including the JS engine) process and verify a program (reporting any errors!) before it executes.*"
+- **==JS is closer to compiled than interpreted==** (but not clearly a compiled or clearly a interpreted) → "*meaning the tools (including the JS engine) process and verify a program (reporting any errors!) before it executes.*"
 
 - **Flow of a JS source program**:
 
-  ![image-20211030215050566]({{ img-url }}/image-20211030215050566.png){:.img-70}
+  ![image-20211030215050566](../img_post/2021-10-29-ydkjsy-1/image-20211030215050566.png){:.img-70}
   *Parsing, Compiling, and Executing JS.*
 
-  1. Program leaves IDE => transpiled by Babel => packed by Webpack => ... => **form1** => delivered to a JS engine.
-  2. JS engine parses the code to an AST (*Abstract Syntax Tree*) <= subsequent execution: form1 > AST > executable form.
-  3. Engine convert that AST to a kind-of byte code => then to JIT (*just in time*) compiler.
+  1. Program leaves IDE → transpiled by Babel → packed by Webpack → ... → **form1** → delivered to a JS engine.
+  2. JS engine parses the code to an AST (*Abstract Syntax Tree*) ← subsequent execution: form1 > AST > executable form.
+  3. Engine convert that AST to a kind-of byte code → then to JIT (*just in time*) compiler.
   4. JS VM executes the program.
 
-- **Web Assembly (WASM)** => ==augments what the web (including JS) can accomplish.==
+- **Web Assembly (WASM)** → ==augments what the web (including JS) can accomplish.==
 
-  - 2013, "**ASM.js**" (a subset of JS lang, *transpiled from C*) was introduced (by Mozilla) to demonstrate the performance of JS engine where it can run an Unreal 3 game at full 60fps. => ASM.js is just a transpiled language (not for coding).
-  - After ASM.js > another group (also Mozilla's) released **Web Assembly (WASM)** <= provide a path for non-JS program (like C) to be converted to a form that could run in the JS engine.
-    - ==WASM's format is entirely unlike JS== => skipping the parsing/compilation JS engine normally does
-    - codes => WASM parsing/compilation => binary packed (easier for JS engine to understand) > JS engine execute them.
-    - <u>Ex</u>: Go program has threaded programming => WASM convert it => JS engine can understand (JS no need to have something like threads feature)
-    - 💡==TC39 aren't stressed to add more features (from other "concurrent" languages) => just keep their rules, WASM will make the bridge.==
+  - 2013, "**ASM.js**" (a subset of JS lang, *transpiled from C*) was introduced (by Mozilla) to demonstrate the performance of JS engine where it can run an Unreal 3 game at full 60fps. → ASM.js is just a transpiled language (not for coding).
+  - After ASM.js > another group (also Mozilla's) released **Web Assembly (WASM)** ← provide a path for non-JS program (like C) to be converted to a form that could run in the JS engine.
+    - ==WASM's format is entirely unlike JS== → skipping the parsing/compilation JS engine normally does
+    - codes → WASM parsing/compilation → binary packed (easier for JS engine to understand) > JS engine execute them.
+    - <u>Ex</u>: Go program has threaded programming → WASM convert it → JS engine can understand (JS no need to have something like threads feature)
+    - 💡==TC39 aren't stressed to add more features (from other "concurrent" languages) → just keep their rules, WASM will make the bridge.==
   - ==WASM isn't only for the web, also isn't JS==.
 
 ### *Strictly* Speaking
 
-- ES5 (2009) => "**strict mode**" => encourage better JS programs.
+- ES5 (2009) → "**strict mode**" → encourage better JS programs.
 
 - **Why**?
 
   - Not a restriction but rather a "guide" so that JS engine can optimize and effectciently run the code.
   - Prevent some "stupid" coding ways when working in group, for example.
 
-- In form of "*early errors*" => ex: disallows naming 2 function parameters the same.
+- In form of "*early errors*" → ex: disallows naming 2 function parameters the same.
 
 - Some examples
 
@@ -224,7 +224,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   }
   ```
 
-- Cannot be default => otherwise, it will break "backward compatibility" rule.
+- Cannot be default → otherwise, it will break "backward compatibility" rule.
 
 - ==Virtually, all transpiled codes (codes in production) ends up in strict mode.==
 
@@ -235,9 +235,9 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
 ### Each File is a Program
 
-- In JS, ==each standalone file is its own separate program==. <= for error handling.
-- How multiple files talk together? => <u>Only way</u>: sharing their **state** + use "**global scope**".
-- ES6 => **module** (also a file-based) <= files are imported to module and be considered as a single module.
+- In JS, ==each standalone file is its own separate program==. ← for error handling.
+- How multiple files talk together? → <u>Only way</u>: sharing their **state** + use "**global scope**".
+- ES6 → **module** (also a file-based) ← files are imported to module and be considered as a single module.
   - JS does still treat each module separately
 - A JS file: either *standardlone* or *module*.
 
@@ -249,7 +249,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
   - *literals*: `string`, `number`, `boolean`
 
-    - `string` literals, eg: `const name = "Thi."` <= Using `""` or `''` is optional but ==should pick one and to use it consistently throughout the program.==
+    - `string` literals, eg: `const name = "Thi."` ← Using `""` or `''` is optional but ==should pick one and to use it consistently throughout the program.==
 
       ```js
       // Also can use backtick ``
@@ -263,9 +263,9 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
     - `boolean`: `true`, `false`.
 
-  - The "emptiness": **undefined**, **null** (They're not the same!) => ==it’s safest and best to use only `undefined` as the single empty value==
+  - The "emptiness": **undefined**, **null** (They're not the same!) → ==it’s safest and best to use only `undefined` as the single empty value==
 
-  - `symbol`, eg. `const a = Symbol("meaning of life")` <= Symbols are mostly used in low-level code such as in libraries and frameworks.
+  - `symbol`, eg. `const a = Symbol("meaning of life")` ← Symbols are mostly used in low-level code such as in libraries and frameworks.
 
 - **Arrays**:
 
@@ -273,10 +273,10 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   names = ["France", 1, null]
   names.length // 3
   names[0] // France
-  typeof names // "object" <= yep!
+  typeof names // "object" ← yep!
 
   // array can contains a function
-  const func = () => true;
+  const func = () → true;
   arr = [func, 1]
   typeof func // "function"
   ```
@@ -302,9 +302,9 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   typeof "abc";                 // "string"
   typeof true;                  // "boolean"
   typeof undefined;             // "undefined"
-  typeof null;                  // "object" <= yep!
+  typeof null;                  // "object" ← yep!
   typeof { "a": 1 };            // "object"
-  typeof [1,2,3];               // "object" <= yep!
+  typeof [1,2,3];               // "object" ← yep!
   typeof function hello(){};    // "function"
   ```
 
@@ -315,16 +315,16 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   ```js
   var adult = true;
   if (adult) {
-    var name = "Thi"; // <= "var" says "this variable will be seen by a wider scope"
-    let age = 30; // <= "let" limit access to "block scope"
+    var name = "Thi"; // ← "var" says "this variable will be seen by a wider scope"
+    let age = 30; // ← "let" limit access to "block scope"
   }
   console.log(name) // Thi
   console.log(age) // Error!
   ```
 
-  **Note**: ==`var` should be avoided in favor of `let` (or `const`)== => prevent confusing in scoping behaviors.
+  **Note**: ==`var` should be avoided in favor of `let` (or `const`)== → prevent confusing in scoping behaviors.
 
-- `let` vs `const` <= must give `const` an initial value and cannot re-assign.
+- `let` vs `const` ← must give `const` an initial value and cannot re-assign.
 
   ```js
   const somethingToBeAssignedLater; // Error!
@@ -349,12 +349,12 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
 ### Functions
 
-- In JS, the word "functions" takes a broader meaning of "procedure" -- a collection of statements can be invoked many times.
+- In JS, the word "functions" takes a broader meaning of "procedure" — a collection of statements can be invoked many times.
 
 - Different types,
 
   ```js
-  // Function declaration <= appear as a statement by itself
+  // Function declaration ← appear as a statement by itself
   function functionName(coolThings) {
     // ...
     return returnedValue;
@@ -387,7 +387,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
   whatToSay.greeting(); // Hello!
   ```
 
-- **[Appendix A](#appendix-a-—-exploring-further)** -- So many function forms
+- **[Appendix A](#appendix-a-—-exploring-further)** — So many function forms
 
   - *Named function expression*
 
@@ -402,7 +402,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
     // 👌 They should have the same name!
     ```
 
-  - Should a function have a name? => "*In my opinion [Kyle's], if a function exists in your program, it has a purpose; otherwise, take it out! And if it has a purpose, it has a natural name that describes that purpose.*"
+  - Should a function have a name? → "*In my opinion [Kyle's], if a function exists in your program, it has a purpose; otherwise, take it out! And if it has a purpose, it has a natural name that describes that purpose.*"
 
   - Some more forms (early 2020, maybe more)
 
@@ -434,20 +434,20 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
     ```js
     var f;
-    f = () => 42;
-    f = x => x * 2;
-    f = (x) => x * 2;
-    f = (x,y) => x * y;
-    f = x => ({ x: x * 2 });
-    f = x => { return x * 2; };
-    f = async x => {
+    f = () → 42;
+    f = x → x * 2;
+    f = (x) → x * 2;
+    f = (x,y) → x * y;
+    f = x → ({ x: x * 2 });
+    f = x → { return x * 2; };
+    f = async x → {
       var y = await doSomethingAsync(x);
       return y * 2;
     };
-    someOperation( x => x * 2 );
+    someOperation( x → x * 2 );
     ```
 
-    - "*Since I don’t think anonymous functions are a good idea to use frequently in your programs, ==I’m not a fan of using the `=>` arrow function form==.*"
+    - "*Since I don’t think anonymous functions are a good idea to use frequently in your programs, ==I’m not a fan of using the `→` arrow function form==.*"
 
   - As *methods* in classes
 
@@ -472,7 +472,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
   - We must be aware of the differences between an **equality** and **equivalence** comparisons.
 
-  - "Triple equal" `===` <= ==Checking both the value and the type== (in fact, **all** comparisons in JS, not just `===`, does consider the type but `===` disallow any kind of conversion while others do)
+  - "Triple equal" `===` ← ==Checking both the value and the type== (in fact, **all** comparisons in JS, not just `===`, does consider the type but `===` disallow any kind of conversion while others do)
 
     ```jsx
     3 === 3.0;              // true
@@ -495,15 +495,15 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
     Number.isNaN(NaN) === Number.isNaN(NaN) // true
 
     0 === -0;               // true
-    Object.is(0, -0)        // false <= should use it, like an "===="
+    Object.is(0, -0)        // false ← should use it, like an "===="
     ```
 
-  - `===` isn't a *structural equality* but *identity equality* for object values <= ==In JS, all object values are held by reference=== (cf. [App. A -- Values vs References](#value-vs-reference))
+  - `===` isn't a *structural equality* but *identity equality* for object values ← ==In JS, all object values are held by reference=== (cf. [App. A — Values vs References](#value-vs-reference))
 
     ```jsx
     [ 1, 2, 3 ] === [ 1, 2, 3 ]         // false
     { a: 42 } === { a: 42 }             // false
-    ( x => x * 2) === ( x => x * 2 )    // false
+    ( x → x * 2) === ( x → x * 2 )    // false
     ```
 
     ```jsx
@@ -533,7 +533,7 @@ keywords: "You Don't Know JS Yet, web dev, understanding, kyle simpson, must rea
 
   - If the comparison is between the ==same value type, both `==` and `===` do exactly the same thing, no difference whatsoever==.
 
-  - Why not just use `===`? => Because `>`, `<`, `>=`, `<=` use coercive also!
+  - Why not just use `===`? → Because `>`, `<`, `>=`, `←` use coercive also!
 
     ```jsx
     var arr = [ "1", "10", "100", "1000" ];
@@ -560,34 +560,34 @@ Two major patterns: **Classes** and **Modules**.
 - **Classes**
 
   - A class in a program is a definition of a "type" of custom data structure that includes both data and behaviors that operate on that data.
-  - Classes define how data structure works but not themselves concrete values. => to get a concrete value of a class, use `new` to *instantiate* it!
+  - Classes define how data structure works but not themselves concrete values. → to get a concrete value of a class, use `new` to *instantiate* it!
 
   ```jsx
   class Page {
     constructor(text) {
-          this.text = text;
+      this.text = text;
     }
 
     print() {
       console.log(this.text);
-      }
+    }
   }
 
   class Notebook {
     constructor() {
-          this.pages = [];
+      this.pages = [];
     }
 
     addPage(text) {
-          var page = new Page(text);
+      var page = new Page(text);
       this.pages.push(page);
-      }
+    }
 
     print() {
-          for (let page of this.pages) {
+      for (let page of this.pages) {
         page.print();
       }
-      }
+    }
   }
 
   var mathNotes = new Notebook();
@@ -645,7 +645,7 @@ Two major patterns: **Classes** and **Modules**.
   ```
 
   - `super()` delegates to parent's constructor for its initial- ization work.
-  - Parent's `print()` and child's `print()` can have the same name and co-exits => called ***polymorphism***!
+  - Parent's `print()` and child's `print()` can have the same name and co-exits → called ***polymorphism***!
 
   ```jsx
   var YDKJS = new Book({
@@ -681,11 +681,11 @@ Two major patterns: **Classes** and **Modules**.
     ```jsx
     function Publication(title,author,pubDate) {
       var publicAPI = {
-          print() {
-               console.log(`Title: ${this.title}, By: ${this.author}, On: ${this.pubDate}`);
+        print() {
+          console.log(`Title: ${this.title}, By: ${this.author}, On: ${this.pubDate}`);
         }
-        };
-        return publicAPI;
+      };
+      return publicAPI;
     }
 
     function Book(bookDetails) {
@@ -696,20 +696,20 @@ Two major patterns: **Classes** and **Modules**.
       );
         var publicAPI = {
         print() {
-                pub.print();
-                console.log(`Publisher: ${this.publisher}, ISBN: ${this.ISBN}.`);
+          pub.print();
+          console.log(`Publisher: ${this.publisher}, ISBN: ${this.ISBN}.`);
         }
       };
-        return publicAPI;
+      return publicAPI;
     }
 
     function BlogPost(title,author,pubDate,URL) {
       var pub = Publication(title,author,pubDate);
         var publicAPI = {
-        print() {
-          pub.print();
-          console.log(URL);
-        }
+          print() {
+            pub.print();
+            console.log(URL);
+          }
         };
         return publicAPI;
     }
