Remove useless posts

--- a/posts/python/2020-03-17-pytest.md
+++ b/posts/python/2020-03-17-pytest.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Pytest"
-tags: [Python, Unit Test]
+tags: [Python, Testing]
 toc: true
 icon: "/img/header/pytest.png"
 notfull: 1
