--- a/posts/web-dev/2021-10-16-11ty-nunjucks.md
+++ b/posts/web-dev/2021-10-16-11ty-nunjucks.md
@@ -5,7 +5,7 @@ tags: [Web Dev, Static Site Generators, 11ty]
 toc: true
 icon: 11ty.jpg
 keywords: "create a website static web 11ty js Nunjucks mozilla template language liquid eleventy nextjs netlify google fonts bootstrap scss css layout web design ssg static site generator static website include template github pages frontmatter markdown code syntax highlight mathjax math markdown-it plugin editor incremental build nunjuck mozilla shortcodes Fontawesome"
-date: 2021-11-19
+date: 2022-09-28
 ---
 
 {% assign img-url = '/img/post/js/gatsby' %}
@@ -433,7 +433,8 @@ Read this [tutorial](https://mozilla.github.io/nunjucks/templating.html#template
 
 ```html {% raw %}
 <!-- _includes/layouts/post.njk -->
---- --- {% extends "layouts/base.njk" %} {% block headerLogo%}
+{% extends "layouts/base.njk" %}
+{% block headerLogo%}
 <!-- only appear on post layout -->
 {% endblock %} {% endraw %}
 ```
@@ -470,6 +471,8 @@ templateContent: //the rendered content of this template. This does not include 
 data: // all data for this piece of content (includes any data inherited from layouts)
 // self-defined frontmatter tags can be found here
 ```
+
+They will be used as `page.fileSlug`!
 
 ::: info
 For ones who wanna get only the content (escape HTML tags and special characters) of the post:
@@ -543,7 +546,7 @@ Other default variable (like `post.url`) can be found [here](https://www.11ty.de
 
 #### Sort posts by titles
 
-**Update**: Below method is old (a hard way), you can refer to [this guide](https://www.11ty.dev/docs/collections/#collection-api-methods).
+👇 **Update**: Below method is old (a hard way), you can refer to [this guide](https://www.11ty.dev/docs/collections/#collection-api-methods).
 
 ```html {% raw %}
 <!-- Create a new list -->
@@ -1528,7 +1531,7 @@ module.exports = {
 🎉 **Update 19 Nov 2021**: 11ty has already added the incremental option (`--incremental`). Check more in [the official document](https://www.11ty.dev/docs/usage/incremental/).
 
 
-::: hsbox Older solution
+::: hsbox Old solution
 👎 **Weakness of 11ty**:
 
 {:.indent}
