--- a/posts/web-dev/2022-09-27-notion-11ty.md
+++ b/posts/web-dev/2022-09-27-notion-11ty.md
@@ -10,12 +10,12 @@ date: 2022-09-27
 
 Get a list of posts in a databse on Notion and parse it to the 11ty.
 
-👉 [Official Notion Developers site](https://developers.notion.com/). 
+👉 [Official Notion Developers site](https://developers.notion.com/).
 
 Follow [Step 1 & Step 2 in this official tutorial](https://developers.notion.com/docs/getting-started). Note that, we don't use `@notionhq/client`, so you don't have to install it. Instead, install following packages,
 
 ```bash
-npm install -D @11ty/eleventy-cache-assets
+npm install -D @11ty/eleventy-fetch
 npm install -D dotenv
 ```
 
@@ -30,13 +30,14 @@ NOTION_VERSION="2022-06-28"
 In your `_data` folder, create `notion.js` (or whatever you want).
 
 ```js
-const Cache = require("@11ty/eleventy-cache-assets");
+const EleventyFetch = require("@11ty/eleventy-fetch");
 require("dotenv").config();
+const { get } = require("lodash");
 
 module.exports = async function () {
   let url = `https://api.notion.com/v1/databases/${process.env.NOTION_TEST_ID}/query`;
 
-  let json = await Cache(url, {
+  let json = await EleventyFetch(url, {
     duration: "1d",
     type: "json",
     fetchOptions: {
@@ -49,11 +50,21 @@ module.exports = async function () {
     },
   });
 
+  json = json.results.map((post) => ({
+    title: get(post, 'properties.Name.title[0].text.content', 'Untitled'),
+  }));
+
   return {
     json,
   };
 };
 ```
+
+::: warning
+If you request the API within 1 day (`duration: "1d"` in the above codes), it keeps using the `.cache` and you may not see the newest changes from the API! In this case, you can remove `.cache` and try again!
+:::
+
+👉 [Read more about `@11ty/eleventy-fetch`](https://www.11ty.dev/docs/plugins/fetch/).
 
 Go to [the official API site](https://developers.notion.com/reference/intro) for more use cases.
 
@@ -63,12 +74,12 @@ You can use [Postman](https://www.postman.com/) or any other API platform to try
 
 :::
 
-A return result will be stored in `notion.json.results`, you can use it in your template as `{%raw%}{{ notion.json.results }}{%endraw%}`. Note that, ==the word "notion" is corresponding to the name of the file `notion.js`!==
-
-::: hsbox An example of the returned json
+An example of the returned json (before the line `json = json.`),
 
 ```json
-[
+{
+  "object": "list",
+  "results": [
     {
       // other fields....
       "properties": {
@@ -109,36 +120,26 @@ A return result will be stored in `notion.json.results`, you can use it in your 
       },
       "url": "https://www.notion.so/url-of-testing-2"
     },
-  ]
+  ],
+  "next_cursor": null,
+  "has_more": false,
+  "type": "page",
+  "page": {}
+}
 ```
 
-:::
+A return result will be stored in `notion.json`, you can use it in your template as `{%raw%}{{ notion.json }}{%endraw%}`. Note that, ==the word "notion" is corresponding to the name of the file `notion.js`!==
 
 To show the list of titles from the returned json,
 
 ```html{%raw%}
 <div class="test-div">
-  {% set notionPostTitles = notion.json.results | getNotionPostTitle %}
+  {% set notionPostTitles = notion.json %}
   {% for post in notionPostTitles %}
     <div>{{ post.title }}</div>
   {% endfor %}
 </div>
 {%endraw%}
-```
-where `getNotionPostTitle` is defined in `.eleventy.ts` as,
-
-```js
-// other codes
-module.exports = function (eleventyConfig) {
-  // other codes
-	eleventyConfig.addFilter("getNotionPostTitle", function (results) {
-    if (!results) return [];
-    return results.map((post) => ({
-      title: get(post, 'properties.Name.title[0].text.content', 'Untitled'),
-    }));
-  });
-  // other codes
-}
 ```
 
 The result will be,
